--- a/style/addingusers.css
+++ b/style/addingusers.css
@@ -10,8 +10,8 @@
 	 	
 }
 .logbox{
-	width:500px;
-	height:600px;
+	width:600px;
+	height:650px;
 	background:url(../Image/6.jpg);
 	color:#000;
 	top:45%;
@@ -23,4 +23,8 @@
 	transform:translate(-50%,-50%);
 	box-sizing:border-box;
 	padding:70px 30px;
+}
+
+.button{
+	margin: 10px;
 }
