--- a/style/addingusers.css
+++ b/style/addingusers.css
@@ -25,6 +25,32 @@
 	padding:70px 30px;
 }
 
-.button{
-	margin: 10px;
+.button1{
+  background-color:green;
+  border: none;
+  color: white;
+  padding: 15px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 15px;
+  width: 100px;
+  
+}
+.button2{
+  background-color:red; 
+  border: none;
+  color: white;
+  padding: 15px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 15px 20px;
+  cursor: pointer;
+  border-radius: 15px;
+  width: 100px;
 }
